--- a/crates/threebug-core/Cargo.toml
+++ b/crates/threebug-core/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 bevy_spicy_networking = { path = "../../vendor/bevy_spicy_networking" }
-
+bevy = "0.9"
 chrono = { version = "0.4", features = [ "serde" ] }
 serde = "1"
 typetag = "0.2.3"
