--- a/crates/threebug-server/Cargo.toml
+++ b/crates/threebug-server/Cargo.toml
@@ -20,5 +20,6 @@ parry3d = { version = "0.12", features = ["serde-serialize"] }
 smooth-bevy-cameras = { git = "https://github.com/bonsairobo/smooth-bevy-cameras.git" }
 bevy_egui = "0.18.0"
 indexmap = "1.7.0"
+bevy-inspector-egui = "0.15.0"
 
 
